Fix spacing after refactor, and video aspect ratio

--- a/website/assets/css/components.pcss
+++ b/website/assets/css/components.pcss
@@ -1,6 +1,6 @@
 @layer components {
   .link {
-    @apply underline text-blue-primary hover:text-blue-900 dark:text-blue-400 dark:hover:text-white;
+    @apply inline-block underline text-blue-primary hover:text-blue-900 dark:text-blue-400 dark:hover:text-white;
     text-decoration-thickness: 1px;
     text-underline-offset: 0.1em;
   }
